# mongo-examples

./: .gitignore  README.md
ASPvectorize/: airbnb_asp.py  sample_ugly.json
MongoMCP/: .env.local.example  .gitignore  AWS_settings.py  Dockerfile  Dockerfile.base  ECS-Service.json  Makefile  README.md  build.sh  docker-compose.yml  health.py  local_settings.py  mcp_config.mcp_tools.json  mongo_mcp.py  requirements.base.txt  requirements.in  requirements.txt  run-local.ps1  run-local.sh  set-env.sh
MongoMCP/MongoMCP/: BedrockClient.py  MongoDBClient.py  MongoDBVectorServer.py  MongoMCPMiddleware.py  MongoTokenVerifier.py  __init__.py
MongoMCP/deployment/: ECS-webui-service.json
MongoMCP/mongoagent/: __init__.py  cache_utils.py  cached_query_processor.py  pyproject.toml  webui_bedrock_client.py
MongoMCP/mongomcp/: __init__.py  bedrock_client.py  mongo_cache.py  mongo_mcp_middleware.py  mongo_token_verifier.py  mongodb_client.py  mongodb_query_provider.py  openai_client.py  pyproject.toml  test_openai_connection.py
dynamicmcp/: Dockerfile  README.md  health.py  main.tf  middle_tool_response.py  mongo_mcp.py  mongo_mcp_annotations.json  mongodb_client.py  mongodb_vector_server.py  requirements.txt  set-env.sh  settings_aws.py
jsonembed/: searchairbnb.py
mcpclient/: README.md  airbnb-mcp.py  airbnb_mcp_cached.py  mcp_client.py  requirements.txt  settings.py
searchmcp/: .gitignore  DEPLOYMENT.md  Dockerfile  ECS-Service.json  README.md  mongo_mcp.py  requirements.txt
webui/: HEADER_UPDATE.md  MARKDOWN_FIX.md  README.md  build_and_run.sh
(+55 files in other folders)
