[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongoagent"
version = "1.0.0"
description = "Web UI agent backend for MongoMCP."
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "requests",
    "boto3",
    "pydantic",
    "gunicorn",
]

[tool.setuptools]
packages = ["mongoagent"]

[tool.setuptools.package-dir]
mongoagent = "."
